--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>24.1.1</version>
+			<version>28.2-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
